kubernetes/1-k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-account-ns
  labels:
    app: bank-account-ns
