kubernetes/3-k8s-db.yaml
# database deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  labels:
    app: mysql-db
  namespace: bank-account-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      name: mysql-db
      labels:
        app: mysql-db
    spec:
      serviceAccountName: pn-svc-account
      containers:
        - name: mysql-db
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mysql-port
          startupProbe:
            tcpSocket:
              port: mysql-port
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: mysql-port
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: mysql-port
            initialDelaySeconds: 30
            periodSeconds: 15
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim
      restartPolicy: Always

---
# database service
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  labels:
    app: mysql-db
  namespace: bank-account-ns
spec:
  selector:
    app: mysql-db
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  type: ClusterIP
