kubernetes/5-k8s-gateway-svc-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-proxy
  labels:
    app: gateway-service-proxy
  namespace: bank-account-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service-proxy
  template:
    metadata:
      name: gateway-service-proxy
      labels:
        app: gateway-service-proxy
    spec:
      serviceAccountName: pn-svc-account
      containers:
        - name: gateway-service-proxy
          image: placidenduwayo1/gateway-service-proxy:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8101
              name: gateway-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-proxy
  labels:
    app: gateway-service-proxy
  namespace: bank-account-ns
spec:
  selector:
    app: gateway-service-proxy
  ports:
    - port: 8101
      protocol: TCP
      targetPort: 8101
      nodePort: 30101
  type: NodePort
