kubernetes/6-1-k8s-bs-ms-customer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-microservice-customer
  labels:
    app: business-microservice-customer
  namespace: bank-account-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: business-microservice-customer
  template:
    metadata:
      name: business-microservice-customer
      labels:
        app: business-microservice-customer
    spec:
      serviceAccountName: pn-svc-account
      containers:
        - name: business-microservice-customer
          image: placidenduwayo1/business-microservice-customer:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8102
              name: customer-api
---
apiVersion: v1
kind: Service
metadata:
  name: business-microservice-customer
  labels:
    app: business-microservice-customer
  namespace: bank-account-ns
spec:
  selector:
    app: business-microservice-customer
  ports:
    - protocol: TCP
      port: 8102
      targetPort: 8102
  type: ClusterIP
