kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: business-microservice-bank-account
  labels:
    app: business-microservice-bank-account
  namespace: bank-account-ns
spec:
  selector:
    app: business-microservice-bank-account
  ports:
    - protocol: TCP
      port: 8103
      targetPort: 8103
  type: NodePort
