kubernetes/7-k8s-ingress-gateway-service-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-routing
  labels:
    app: nginx-ingress-routing
  namespace: bank-account-ns
spec:
  ingressClassName: nginx
  rules:
    - host: gateway.com
      http:
        paths:
          - backend:
              service:
                name: gateway-service-proxy
                port:
                  number: 8101
            pathType: Prefix
            path: /
